# globant_assessment

./: README.md  pyproject.toml
apps/weather/: serializers.py  tests.py  urls.py  views.py
apps/weather/helpers/: temp_converter.py  wind_descriptor.py
apps/weather/utils/: open_weather_integrator.py
weather_api/: .example.env  settings.py  urls.py
