[tool.poetry]
name = "globant-test"
version = "0.1.0"
description = "\"Globant assessment\""
authors = ["\"Rodrigo Vidal\""]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
requests = "^2.27.1"
beaufort-scale = "^1.0.1"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
